--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,11 @@
       padding: theme('spacing.6');
       box-shadow: theme('boxShadow.xl');
     }
+    .smallcard {
+      background-color: theme('colors.white');
+      border-radius: theme('borderRadius.lg');
+      padding: theme('spacing.2');
+      box-shadow: theme('boxShadow.xl');
+    }
     /* ... */
   }
